# protobuf-example

./: CMakeLists.txt  main.cpp
proto/: my.proto  service.proto
